# atol-genome-launcher

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
deprecated/: schema.json
extras/: Makefile  convert_yaml_manifest_to_json.py  dump_json_schema.py  generate_dummy_assembly_files.sh  test_github_commands.py  test_manifest_class.py
src/assembly_config_generator/: __init__.py  assembly_config_generator.py
src/assembly_config_generator/templates/: sanger-tol_ascc_0.5.3.yaml.j2  sanger-tol_genomeassembly_0.50.0.yaml.j2
src/assembly_data_downloader/: assembly_data_downloader.py
src/assembly_data_downloader/workflow/: Snakefile
src/bpa_file_downloader/: bpa_file_downloader.py
src/bpa_file_downloader/workflow/: Snakefile
src/common/: __init__.py
src/deploy_pipeline/: deploy_pipeline.py
src/pipeline_config_generator/: __init__.py  pipeline_config_generator.py
src/pipeline_config_generator/templates/: sanger-tol_ascc_0.5.3.samplesheet.csv.j2  sanger-tol_ascc_0.5.3.yaml.j2  sanger-tol_genomeassembly_e651801.data.yaml.j2  sanger-tol_genomeassembly_e651801.spec.yaml.j2  sanger-tol_treeval_1.4.5.yaml.j2
src/pipeline_result_uploader/: pipeline_result_uploader.py
src/pipeline_result_uploader/workflow/: Snakefile
src/request_assembly_repo/: request_assembly_repo.py
src/result_file_uploader/: result_file_uploader.py
src/result_file_uploader/workflow/: Snakefile
src/rnaseq_manifest_generator/: rnaseq_manifest_generator.py
src/rnaseq_reads_downloader/: rnaseq_reads_downloader.py
src/rnaseq_reads_downloader/workflow/: Snakefile
src/snakemake_setup/: __init__.py
src/yaml_manifest/: __init__.py  assembly_types.json  directory_layout.json  layout.py  models.py  parser.py  schema.json
test-data/: dummy.yaml  dummy_no_lane.json  dummy_nohic.json  dummy_nohic.yaml  dummy_ont.json  dummy_ont.yaml  dummy_pb.json  dummy_pb.yaml
